# gst-plugin-qrcode

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  gstqrcodedec.c  gstqrcodedec.h
